WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276975
REGRESSION (
281145@main
): nullptr dereference in VideoPresentationModelVideoElement::requestFullscreenMode
https://bugs.webkit.org/show_bug.cgi?id=276975
Summary
REGRESSION (281145@main): nullptr dereference in VideoPresentationModelVideoE...
Andy Estes
Reported
2024-07-23 16:23:05 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-07-23 16:23:11 PDT
<
rdar://problem/132349049
>
Andy Estes
Comment 2
2024-07-23 16:24:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31132
EWS
Comment 3
2024-07-24 09:16:48 PDT
Committed
281299@main
(79d73eae9a76): <
https://commits.webkit.org/281299@main
> Reviewed commits have been landed. Closing PR #31132 and removing active labels.
EWS
Comment 4
2024-07-25 13:20:07 PDT
Committed
280938.124@safari-7619-branch
(5e474677585a): <
https://commits.webkit.org/280938.124@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1489 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug