Cherry-pick 79d73eae9a76. rdar://132349049

REGRESSION (281145@main): nullptr dereference in VideoPresentationModelVideoElement::requestFullscreenMode
    https://bugs.webkit.org/show_bug.cgi?id=276975
    rdar://132349049

    Reviewed by Eric Carlson.

    A null check was added in 281266@main, which landed simultaneously with posting this change for
    review. 281266@main fixes the crash, and this change follows it up by conforming to our smart
    pointer guidelines.

    Crash covered by existing tests.

    * Source/WebCore/platform/cocoa/VideoPresentationModelVideoElement.mm:
    (WebCore::VideoPresentationModelVideoElement::requestFullscreenMode):

    Canonical link: https://commits.webkit.org/281299@main

Canonical link: https://commits.webkit.org/280938.124@safari-7619-branch